[workspace]
members = [
    "blockchain/beacon",
    "blockchain/beacon",
    "blockchain/blocks",
    "blockchain/chain",
    "blockchain/chain_sync",
    "blockchain/message_pool",
    "blockchain/state_manager",
    "crypto",
    "encoding",
    "forest",
    "ipld",
    "ipld/amt",
    "ipld/blockstore",
    "ipld/car",
    "ipld/cid",
    "ipld/graphsync",
    "ipld/hamt",
    "key_management",
    "node/clock",
    "node/rpc",
    "node/state_api",
    "tests/serialization_tests",
    "types",
    "utils/bigint",
    "utils/bitfield",
    "utils/commcid",
    "utils/json_utils",
    "utils/test_utils",
    "vm",
    "vm/actor",
    "vm/address",
    "vm/interpreter",
    "vm/message",
    "vm/runtime",
    "vm/state_tree",
]
