[package]
name = "forest_ipld"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[package.metadata.docs.rs]
features = [ "json" ]

[dependencies]
async-recursion = "0.3.1"
async-trait = "0.1"
encoding = { package = "forest_encoding", path = "../encoding" }
indexmap = { version = "1.3.2", features = [ "serde-1" ] }
multibase = { version = "0.8.0", optional = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"

[dependencies.cid]
package = "forest_cid"
path = "../ipld/cid"
features = [ "cbor", "json" ]

[features]
json = [ "serde_json", "multibase" ]
submodule_tests = [ "json" ]

[dev-dependencies]
async-std = { version = "1.6.0", features = [ "attributes" ] }
db = { path = "../node/db" }
ipld_blockstore = { path = "blockstore" }
serde_json = "1.0"
