[package]
name = "key_management"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[package.metadata.docs.rs]
features = [ "json" ]

[dependencies]
address = { package = "forest_address", path = "../vm/address", version = "0.2" }
base64 = { version = "0.12.1", optional = true }
bls-signatures = "0.6.0"
crypto = { package = "forest_crypto", path = "../crypto" }
encoding = { package = "forest_encoding", path = "../encoding", version = "0.1" }
libsecp256k1 = "0.3.4"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.57"
thiserror = "1.0"

[features]
json = [ "base64", "crypto/json" ]
