[package]
name = "fil_types"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[package.metadata.docs.rs]
features = [ "json" ]

[dependencies]
base64 = { version = "0.12.1", optional = true }
cid = { package = "forest_cid", path = "../ipld/cid", features = [ "cbor" ] }
clock = { path = "../node/clock" }
commcid = { path = "../utils/commcid" }
encoding = { package = "forest_encoding", path = "../encoding" }
filecoin-proofs-api = "4.0.1"
forest_json_utils = { path = "../utils/json_utils", optional = true }
num-bigint = { path = "../utils/bigint", package = "forest_bigint" }
num-derive = "0.3.0"
num-traits = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
vm = { package = "forest_vm", path = "../vm" }

[features]
json = [ "base64", "forest_json_utils" ]
