[package]
name = "forest_vm"
description = "Forest VM types"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[package.metadata.docs.rs]
features = [ "json" ]

[dependencies]
address = { package = "forest_address", path = "./address", version = "0.2" }
cid = { package = "forest_cid", path = "../ipld/cid", version = "0.1", features = [ "cbor", "json" ] }
encoding = { package = "forest_encoding", path = "../encoding", version = "0.1" }
lazy_static = "1.4"
num-bigint = { package = "forest_bigint", path = "../utils/bigint", version = "0.1" }
num-derive = "0.3.0"
num-traits = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0.11"

[features]
json = [ ]
