[package]
name = "forest_blocks"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[package.metadata.docs.rs]
features = [ "json" ]

[dependencies]
address = { package = "forest_address", path = "../../vm/address" }
base64 = { version = "0.12.1", optional = true }
beacon = { path = "../beacon" }
byteorder = "1.3.4"
cid = { package = "forest_cid", path = "../../ipld/cid", features = [ "cbor" ] }
clock = { path = "../../node/clock" }
crypto = { package = "forest_crypto", path = "../../crypto" }
derive_builder = "0.9"
encoding = { package = "forest_encoding", path = "../../encoding" }
fil_types = { path = "../../types" }
forest_json_utils = { path = "../../utils/json_utils", optional = true }
message = { package = "forest_message", path = "../../vm/message" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
serde = { version = "1.0", features = [ "derive" ] }
sha2 = { version = "0.9", default-features = false }
thiserror = "1.0"
vm = { package = "forest_vm", path = "../../vm" }

[dev-dependencies]
base64 = "0.12.1"
hex = "0.4.2"
serde_json = "1.0"

test_utils = { version = "0.1.0", path = "../../utils/test_utils/", features = [ "test_constructors" ] }

[features]
json = [ "base64", "crypto/json", "forest_json_utils", "beacon/json", "cid/json", "fil_types/json" ]
