[package]
name = "chain"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
actor = { path = "../../vm/actor/" }
address = { package = "forest_address", path = "../../vm/address" }
beacon = { path = "../beacon" }
blake2b_simd = "0.5.9"
blocks = { package = "forest_blocks", path = "../blocks" }
byteorder = "1.3.4"
cid = { package = "forest_cid", path = "../../ipld/cid" }
clock = { path = "../../node/clock" }
crypto = { package = "forest_crypto", path = "../../crypto" }
db = { path = "../../node/db" }
encoding = { package = "forest_encoding", path = "../../encoding" }
flo_stream = "0.4.0"
ipld_amt = { path = "../../ipld/amt/" }
ipld_blockstore = { path = "../../ipld/blockstore" }
log = "0.4.8"
message = { package = "forest_message", path = "../../vm/message" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
num-traits = "0.2"
serde = { version = "1.0", features = [ "derive" ] }
state_tree = { path = "../../vm/state_tree/" }
thiserror = "1.0"

[dev-dependencies]
multihash = "0.10.0"
test_utils = { version = "0.1.0", path = "../../utils/test_utils/", features = [
    "test_constructors"
] }
