[package]
name = "ipld_blockstore"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
cid = { package = "forest_cid", path = "../cid" }
commcid = { path = "../../utils/commcid" }
db = { path = "../../node/db" }
encoding = { package = "forest_encoding", path = "../../encoding" }
forest_ipld = { path = "../" }

[features]
rocksdb = [ "db/rocksdb" ]
