[package]
name = "forest_car"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
blockstore = { package = "ipld_blockstore", path = "../blockstore" }
cid = { package = "forest_cid", path = "../cid", features = [ "cbor" ] }
forest_encoding = { path = "../../encoding" }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
unsigned-varint = "0.4"

[dev-dependencies]
db = { path = "../../node/db" }
