[package]
name = "graphsync"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
async-trait = "0.1"
bytes = "0.5.2"
cid = { package = "forest_cid", path = "../cid", version = "0.1" }
fnv = "1.0.6"
forest_encoding = { path = "../../encoding", version = "0.1" }
forest_ipld = { path = "../" }
futures = "0.3.5"
futures-util = "0.3.5"
futures_codec = "0.4.0"
ipld_blockstore = { path = "../blockstore" }
libp2p = "0.21.1"
log = "0.4.8"
protobuf = "2.14.0"
serde = { version = "1.0", features = [ "derive" ] }
smallvec = "1.1.0"
unsigned-varint = { version = "0.4", features = [ "futures-codec" ] }

[build-dependencies]
protoc-rust = "2.14.0"

[dev-dependencies]
async-std = "1.5"
multihash = "0.10"
rand = "0.7"
