[package]
name = "forest_libp2p"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
async-std = { version = "1.6.0", features = [ "unstable" ] }
async-trait = "0.1"

bytes = "0.5.2"
clock = { path = "../clock" }
fnv = "1.0.6"
forest_blocks = { path = "../../blockchain/blocks" }
forest_cid = { path = "../../ipld/cid" }
forest_encoding = { path = "../../encoding" }
forest_message = { path = "../../vm/message" }
futures = "0.3.5"
futures-util = "0.3.5"
futures_codec = "0.4.0"
ipld_blockstore = { path = "../../ipld/blockstore" }
libipld-core = "0.3.0"
libp2p = "0.21.1"
libp2p-bitswap = "0.5"
libp2p-request-response = { git = "https://github.com/ChainSafe/rust-libp2p", rev = "836f3e3df0119d10618b11901f1ce3d1f36de836" }
log = "0.4.8"
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
serde = { version = "1.0", features = [ "derive" ] }
smallvec = "1.1.0"
utils = { path = "../utils" }

[dev-dependencies]
crypto = { package = "forest_crypto", path = "../../crypto" }
forest_address = { path = "../../vm/address" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
