[package]
name = "rpc-client"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
blocks = { package = "forest_blocks", path = "../../blockchain/blocks", features = [ "json" ] }
cid = { package = "forest_cid", path = "../../ipld/cid", features = [ "json" ] }
crypto = { package = "forest_crypto", path = "../../crypto", features = [ "json" ] }
jsonrpc-v2 = { version = "0.5.2", features = [ "easy-errors", "macros" ] }
jsonrpsee = "0.1.0"
log = "0.4.8"
message = { package = "forest_message", path = "../../vm/message", features = [ "json" ] }
serde_json = "1.0"
wallet = { package = "key_management", path = "../../key_management", features = [ "json" ] }
