[package]
name = "rpc"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
address = { package = "forest_address", path = "../../vm/address" }
async-std = { version = "1.6.0", features = [ "attributes" ] }
blocks = { package = "forest_blocks", path = "../../blockchain/blocks", features = [ "json" ] }
blockstore = { package = "ipld_blockstore", path = "../../ipld/blockstore" }
chain = { path = "../../blockchain/chain" }
chain_sync = { path = "../../blockchain/chain_sync" }
cid = { package = "forest_cid", path = "../../ipld/cid", features = [ "json" ] }
clock = { path = "../clock" }
crypto = { package = "forest_crypto", path = "../../crypto", features = [ "json" ] }
encoding = { package = "forest_encoding", path = "../../encoding/" }
forest_libp2p = { path = "../forest_libp2p" }
jsonrpc-v2 = { version = "0.5.2", features = [ "easy-errors", "macros" ] }
message = { package = "forest_message", path = "../../vm/message", features = [ "json" ] }
message_pool = { path = "../../blockchain/message_pool" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
num-traits = "0.2.11"
serde = { version = "1.0.101", default-features = false, features = [ "derive" ] }
serde_json = "1.0.48"
state_manager = { package = "state_manager", path = "../../blockchain/state_manager" }
state_tree = { path = "../../vm/state_tree" }
thiserror = "1.0"
tide = "0.9.0"
wallet = { package = "key_management", path = "../../key_management", features = [ "json" ] }

[dev-dependencies]
db = { path = "../db" }
futures = "0.3.5"
hex = "0.4.2"
test_utils = { version = "0.1.0", path = "../../utils/test_utils/", features = [ "test_constructors" ] }
