[package]
name = "state_api"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
actor = { path = "../../vm/actor/" }
address = { package = "forest_address", path = "../../vm/address" }
async-std = { version = "1.6.0", features = [ "unstable" ] }
bitfield = { path = "../../utils/bitfield" }
blocks = { package = "forest_blocks", path = "../../blockchain/blocks" }
blockstore = { package = "ipld_blockstore", path = "../../ipld/blockstore/" }
chain = { path = "../../blockchain/chain" }
cid = { package = "forest_cid", path = "../../ipld/cid" }
clock = { path = "../../node/clock" }
fil_types = { path = "../../types" }
interpreter = { path = "../../vm/interpreter/" }
message = { package = "forest_message", path = "../../vm/message" }
num-bigint = "0.2.6"
num-traits = "0.2"
state_manager = { path = "../../blockchain/state_manager" }
state_tree = { path = "../../vm/state_tree/" }
