[package]
name = "serialization_tests"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[features]
submodule_tests = [ "serde", "crypto", "base64" ]

[dependencies]
base64 = { version = "0.12.1", optional = true }
crypto = { package = "forest_crypto", path = "../../crypto", optional = true }
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dev-dependencies]
address = { package = "forest_address", path = "../../vm/address" }
bls-signatures = "0.6.0"
cid = { package = "forest_cid", path = "../../ipld/cid", features = [ "cbor", "json" ] }
encoding = { package = "forest_encoding", path = "../../encoding" }
fil_types = { path = "../../types" }
forest_blocks = { path = "../../blockchain/blocks", features = [ "json" ] }
forest_message = { path = "../../vm/message", features = [ "json" ] }
hex = "0.4.2"
num-traits = "0.2"
serde_json = "1.0"
vm = { package = "forest_vm", path = "../../vm" }
