[package]
name = "test_utils"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[package.metadata.docs.rs]
features = [ "test_constructors" ]

[dependencies]
address = { package = "forest_address", path = "../../vm/address" }
async-std = { version = "1.6.0", features = [ "unstable" ] }
base64 = "0.12.1"
blocks = { package = "forest_blocks", path = "../../blockchain/blocks/", optional = true }
chain = { path = "../../blockchain/chain/", optional = true }
cid = { package = "forest_cid", path = "../../ipld/cid", optional = true }
crypto = { package = "forest_crypto", path = "../../crypto" }
encoding = { package = "forest_encoding", path = "../../encoding/" }
forest_libp2p = { path = "../../node/forest_libp2p/", optional = true }
ipld_blockstore = { path = "../../ipld/blockstore" }
message = { package = "forest_message", path = "../../vm/message", optional = true }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }

[features]
test_constructors = [ "blocks", "chain", "cid", "message", "forest_libp2p" ]
