[package]
name = "actor"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
address = { package = "forest_address", path = "../address" }
ahash = "0.4"
base64 = "0.12.1"
bitfield = { path = "../../utils/bitfield" }
byteorder = "1.3.4"
cid = { package = "forest_cid", path = "../../ipld/cid", features = [ "cbor" ] }
clock = { path = "../../node/clock" }
crypto = { package = "forest_crypto", path = "../../crypto" }
derive_builder = "0.9"
encoding = { package = "forest_encoding", path = "../../encoding" }
fil_types = { path = "../../types" }
forest_ipld = { path = "../../ipld" }
integer-encoding = "1.1.5"
ipld_amt = { path = "../../ipld/amt" }
ipld_blockstore = { path = "../../ipld/blockstore" }
ipld_hamt = { path = "../../ipld/hamt" }
lazy_static = "1.4.0"
log = "0.4.8"
message = { package = "forest_message", path = "../message" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
num-derive = "0.3.0"
num-traits = "0.2"
runtime = { path = "../runtime" }
serde = { version = "1.0", features = [ "derive" ] }
unsigned-varint = "0.4"
vm = { package = "forest_vm", path = "../../vm" }

[dev-dependencies]
db = { path = "../../node/db" }
hex = "0.4.2"
libp2p = "0.21.1"
