[package]
name = "forest_address"
description = "Filecoin addresses for use in Forest"
license = "MIT OR Apache-2.0"
version = "0.2.2"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

[dependencies]
data-encoding = "2.1.2"
data-encoding-macro = "0.1.7"
encoding = { package = "forest_encoding", path = "../../encoding", version = "0.1" }
leb128 = "0.2.1"
num-derive = "0.3.0"
num-traits = "0.2"
thiserror = "1.0"
