[package]
name = "interpreter"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
actor = { path = "../actor" }
address = { package = "forest_address", path = "../address" }
blocks = { package = "forest_blocks", path = "../../blockchain/blocks" }
byteorder = "1.3.4"
chain = { path = "../../blockchain/chain" }
cid = { package = "forest_cid", path = "../../ipld/cid" }
clock = { path = "../../node/clock" }
crypto = { package = "forest_crypto", path = "../../crypto" }
db = { path = "../../node/db" }
fil_types = { path = "../../types" }
forest_encoding = { path = "../../encoding" }
ipld_blockstore = { path = "../../ipld/blockstore" }
log = "0.4.8"
message = { package = "forest_message", path = "../message" }
num-bigint = { path = "../../utils/bigint", package = "forest_bigint" }
num-traits = "0.2.11"
runtime = { path = "../runtime" }
state_tree = { path = "../state_tree" }
vm = { package = "forest_vm", path = "../" }

[dev-dependencies]
ipld_hamt = { path = "../../ipld/hamt" }
