[package]
name = "runtime"
version = "0.1.0"
authors = [ "ChainSafe Systems <info@chainsafe.io>" ]
edition = "2018"

[dependencies]
address = { package = "forest_address", path = "../address" }
base64 = "0.12.1"
cid = { package = "forest_cid", path = "../../ipld/cid" }
clock = { path = "../../node/clock" }
commcid = { path = "../../utils/commcid" }
crypto = { package = "forest_crypto", path = "../../crypto" }
fil_types = { path = "../../types" }
filecoin-proofs-api = "4.0.1"
forest_encoding = { path = "../../encoding" }
ipld_blockstore = { path = "../../ipld/blockstore" }
log = "0.4.8"
message = { package = "forest_message", path = "../message" }
rayon = "1.3"
vm = { package = "forest_vm", path = "../../vm" }

[dev-dependencies]
db = { path = "../../node/db/" }
interpreter = { path = "../interpreter/" }
